Исправил формирование имени файла выгрузки отчета Подшлифовал странички веб морды

--- a/src/main/resources/templates/clients/lenta.html
+++ b/src/main/resources/templates/clients/lenta.html
@@ -7,26 +7,101 @@
 </head>
 <body>
 <div th:replace="/include/_header :: content"></div>
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="col-sm-3">-->
+<!--            <div th:replace="/include/sidebar :: sidebar"></div>-->
+<!--        </div>-->
+<!--        <div class="col-sm-9">-->
+<!--            <div class="row">-->
+<!--                <blockquote class="blockquote">-->
+<!--                    <p>Lenta</p>-->
+<!--                </blockquote>-->
+<!--                <div class="col-6 col-sm-4">-->
+<!--                    <form th:action="@{/excel/lenta}" th:method="post" enctype="multipart/form-data">-->
+<!--                        <label for="lentaTask" class="form-label">Обработка задания клиента lenta</label>-->
+<!--                        <div class="row mb-3">-->
+<!--                            &lt;!&ndash;                            <br>&ndash;&gt;-->
+<!--                            <input type="file" class="form-control" name="file" id="lentaTask">-->
+<!--                        </div>-->
+<!--                        &lt;!&ndash;                        <br>&ndash;&gt;-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-6 col-sm-8">-->
+<!--                                <button class="btn btn-primary">-->
+<!--                                    Загрузить-->
+<!--                                </button>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--                <div class="col-6 col-sm-8">-->
+<!--                    <form th:action="@{/excel/lentaReport}" th:method="post" th:object="${lenta}"-->
+<!--                          enctype="multipart/form-data">-->
+<!--                        <label for="lentaReport" class="form-label">Обработка отчета клиента lenta</label>-->
+<!--                        <div class="input-group mb-3">-->
+<!--                            <input type="file" class="form-control" name="file" id="lentaReport" placeholder="file">-->
+<!--                            <span class="input-group-text"> Удалить акции старше </span>-->
+<!--                            <label>-->
+<!--                                <span class="datepicker-toggle">-->
+<!--                                <span class="datepicker-toggle-button">-->
+<!--                                <input type="date" th:field="${lenta.afterDate}"/>-->
+<!--                                </span>-->
+<!--                                    </span>-->
+<!--                            </label>-->
+<!--                        </div>-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-6 col-sm-8">-->
+<!--                                <button type="submit" class="btn btn-primary">-->
+<!--                                    Загрузить-->
+<!--                                </button>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <br>-->
+<!--            <div class="row">-->
+<!--                <div class="col-6 col-sm-8">-->
+<!--                    <form th:action="@{/excel/edadeal}" th:method="post" th:object="${edadeal}"-->
+<!--                          enctype="multipart/form-data">-->
+<!--                        <label for="edadeal" class="form-label">Обработка выгрузки едадила</label>-->
+<!--                        <div class="">-->
+<!--                            <input type="file" class="form-control" name="file" id="edadeal" placeholder="file" aria-describedby="edadelAria">-->
+<!--                            <div id="edadelAria" class="form-text">Удалить все строки содержащие цены "от" и склеить продавец + модель в ID-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-6 col-sm-8">-->
+<!--                                <button type="submit" class="btn btn-primary">-->
+<!--                                    Загрузить-->
+<!--                                </button>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                </div>-->
+
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
 <div class="container">
     <div class="row">
         <div class="col-sm-3">
             <div th:replace="/include/sidebar :: sidebar"></div>
         </div>
         <div class="col-sm-9">
+            <h2 class="display-4 mb-4">Lenta</h2>
             <div class="row">
-                <blockquote class="blockquote">
-                    <p>Lenta</p>
-                </blockquote>
-                <div class="col-6 col-sm-4">
+                <div class="col-12 col-sm-6">
                     <form th:action="@{/excel/lenta}" th:method="post" enctype="multipart/form-data">
-                        <label for="lentaTask" class="form-label">Обработка задания клиента lenta</label>
-                        <div class="row mb-3">
-                            <!--                            <br>-->
+                        <h4>Обработка задания клиента Lenta</h4>
+                        <div class="mb-3">
+                            <label for="lentaTask" class="form-label">Выберите файл:</label>
                             <input type="file" class="form-control" name="file" id="lentaTask">
                         </div>
-                        <!--                        <br>-->
                         <div class="row">
-                            <div class="col-6 col-sm-8">
+                            <div class="col-12">
                                 <button class="btn btn-primary">
                                     Загрузить
                                 </button>
@@ -34,23 +109,19 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-6 col-sm-8">
-                    <form th:action="@{/excel/lentaReport}" th:method="post" th:object="${lenta}"
-                          enctype="multipart/form-data">
-                        <label for="lentaReport" class="form-label">Обработка отчета клиента lenta</label>
-                        <div class="input-group mb-3">
+                <div class="col-12 col-sm-6">
+                    <form th:action="@{/excel/lentaReport}" th:method="post" th:object="${lenta}" enctype="multipart/form-data">
+                        <h4>Обработка отчета клиента Lenta</h4>
+                        <div class="mb-3">
+                            <label for="lentaReport" class="form-label">Выберите файл отчета:</label>
                             <input type="file" class="form-control" name="file" id="lentaReport" placeholder="file">
+                        </div>
+                        <div class="input-group mb-3">
                             <span class="input-group-text"> Удалить акции старше </span>
-                            <label>
-                                <span class="datepicker-toggle">
-                                <span class="datepicker-toggle-button">
-                                <input type="date" th:field="${lenta.afterDate}"/>
-                                </span>
-                                    </span>
-                            </label>
+                            <input type="date" class="form-control" th:field="${lenta.afterDate}" />
                         </div>
                         <div class="row">
-                            <div class="col-6 col-sm-8">
+                            <div class="col-12">
                                 <button type="submit" class="btn btn-primary">
                                     Загрузить
                                 </button>
@@ -59,19 +130,18 @@
                     </form>
                 </div>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-6 col-sm-8">
-                    <form th:action="@{/excel/edadeal}" th:method="post" th:object="${edadeal}"
-                          enctype="multipart/form-data">
-                        <label for="edadeal" class="form-label">Обработка выгрузки едадила</label>
-                        <div class="">
+            <div class="row mt-3">
+                <div class="col-12">
+                    <form th:action="@{/excel/edadeal}" th:method="post" th:object="${edadeal}" enctype="multipart/form-data">
+                        <h4>Обработка выгрузки Едадила</h4>
+                        <div class="mb-3">
+                            <label for="edadeal" class="form-label">Выберите файл выгрузки:</label>
                             <input type="file" class="form-control" name="file" id="edadeal" placeholder="file" aria-describedby="edadelAria">
                             <div id="edadelAria" class="form-text">Удалить все строки содержащие цены "от" и склеить продавец + модель в ID
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-6 col-sm-8">
+                            <div class="col-12">
                                 <button type="submit" class="btn btn-primary">
                                     Загрузить
                                 </button>
@@ -79,7 +149,6 @@
                         </div>
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
