--- a/src/main/resources/templates/clients/simple.html
+++ b/src/main/resources/templates/clients/simple.html
@@ -2,43 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lenta</title>
+    <title>Simple</title>
 </head>
 <body>
 <div th:replace="/include/_header :: content"></div>
-<!--<div class="container">-->
-<!--    <div class="row">-->
-<!--        <div class="col-sm-3">-->
-<!--            <div th:replace="/include/sidebar :: sidebar"></div>-->
-<!--        </div>-->
-<!--        <div class="col-sm-9">-->
-<!--            <div class="row">-->
-<!--                <blockquote class="blockquote">-->
-<!--                    <p>Simple.ru</p>-->
-<!--                </blockquote>-->
-<!--                <div class="col-12 col-sm-6">-->
-<!--                    <fieldset>-->
-<!--                        <form th:action="@{/excel/simpleReport}" th:method="post" enctype="multipart/form-data">-->
-<!--                            <label for="simple_report" class="form-label">Простая обработка отчета клиента-->
-<!--                                simple.ru</label>-->
-<!--                            <div class="">-->
-<!--                                <input type="file" class="form-control form-control-sm" name="file" id="simple_report"-->
-<!--                                       aria-describedby="simpleHelp">-->
-<!--                                <div id="simpleHelp" class="form-text">Выберите оригинальный файл отчета для обработки-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                            <br>-->
-<!--                            <button class="btn btn-primary">-->
-<!--                                Загрузить-->
-<!--                            </button>-->
-<!--                        </form>-->
-<!--                    </fieldset>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
 <div class="container">
     <div class="row">
         <div class="col-sm-3">
