--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -1,49 +1,3 @@
-<!--<div th:fragment="sidebar">-->
-<!--    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">-->
-<!--        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">-->
-<!--            <svg class="bi me-2" width="40" height="32">-->
-<!--                <use xlink:href="#bootstrap"/>-->
-<!--            </svg>-->
-<!--            <span class="fs-4">Клиенты</span>-->
-<!--        </a>-->
-<!--        <hr>-->
-<!--        <ul class="nav nav-pills flex-column mb-auto">-->
-<!--            <li class="nav-item">-->
-<!--                <a href="/clients/lenta" class="nav-link link-dark">-->
-<!--                    <svg class="bi me-2" width="16" height="16">-->
-<!--                        <use xlink:href=""/>-->
-<!--                    </svg>-->
-<!--                    Lenta-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a href="/clients/megatop" class="nav-link link-dark">-->
-<!--                    <svg class="bi me-2" width="16" height="16">-->
-<!--                        <use xlink:href="#speedometer2"/>-->
-<!--                    </svg>-->
-<!--                    Megatop-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a href="/clients/simple" class="nav-link link-dark">-->
-<!--                    <svg class="bi me-2" width="16" height="16">-->
-<!--                        <use xlink:href="#grid"/>-->
-<!--                    </svg>-->
-<!--                    Simple-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a href="/util" class="nav-link link-dark">-->
-<!--                    <svg class="bi me-2" width="16" height="16">-->
-<!--                        <use xlink:href=""/>-->
-<!--                    </svg>-->
-<!--                    Утилиты-->
-<!--                </a>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--        <hr>-->
-<!--    </div>-->
-
     <!-- Sidebar -->
     <div th:fragment="sidebar" class="col-md-2">
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
@@ -80,6 +34,14 @@
                     </a>
                 </li>
                 <li>
+                    <a href="/clients/av" class="nav-link link-dark">
+                        <svg class="bi me-2" width="16" height="16">
+                            <use xlink:href=""/>
+                        </svg>
+                        Av
+                    </a>
+                </li>
+                <li>
                     <a href="/util" class="nav-link link-dark">
                         <svg class="bi me-2" width="16" height="16">
                             <use xlink:href=""/>
@@ -91,5 +53,3 @@
             <hr>
         </div>
     </div>
-
-<!--</div>-->
