попытался добавить скачивание репорта, пока куча всего переделывать нужно

--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -38,7 +38,7 @@
                         <svg class="bi me-2" width="16" height="16">
                             <use xlink:href=""/>
                         </svg>
-                        Av
+                        Azbuka
                     </a>
                 </li>
                 <li>
