Начал почти с начала, очищаю от лишних методов

--- a/src/main/resources/templates/clients/lenta.html
+++ b/src/main/resources/templates/clients/lenta.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <button class="btn btn-primary">
+                                <button class="btn btn-primary" name="lenta" value="task">
                                     Загрузить
                                 </button>
                             </div>
@@ -43,7 +43,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <button type="submit" class="btn btn-primary">
+                                <button type="submit" class="btn btn-primary" name="lenta" value="report">
                                     Загрузить
                                 </button>
                             </div>
@@ -63,7 +63,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <button type="submit" class="btn btn-primary">
+                                <button type="submit" class="btn btn-primary" name="lenta" value="edadeal">
                                     Загрузить
                                 </button>
                             </div>
