--- a/src/main/resources/templates/clients/simple.html
+++ b/src/main/resources/templates/clients/simple.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <fieldset>
-                        <form th:action="@{/excel/simpleReport}" th:method="post" enctype="multipart/form-data">
+                        <form th:action="@{/excel/simple/upload/report}" th:method="post" enctype="multipart/form-data">
                             <div class="mb-3">
                                 <label for="simple_report" class="form-label">Простая обработка отчета клиента
                                     simple.ru</label>
