Добавил многопоточное чтение файлов азбуки, мегатопа. Начал причесывать остальные методы чтения файлов

--- a/src/main/resources/templates/clients/av.html
+++ b/src/main/resources/templates/clients/av.html
@@ -24,7 +24,7 @@
                         <h4>Обработка задания</h4>
                         <div class="mb-3">
                             <label for="AvTask" class="form-label">Выберите файл:</label>
-                            <input type="file" class="form-control" name="file" id="AvTask">
+                            <input type="file" class="form-control" name="file" multiple id="AvTask">
                         </div>
                         <div class="row">
                             <div class="col-12">
@@ -62,7 +62,7 @@
                         <h4>Обработка отчета</h4>
                         <div class="mb-3">
                             <label for="AvReport" class="form-label">Выберите файл:</label>
-                            <input type="file" class="form-control" name="file" id="AvReport">
+                            <input type="file" class="form-control" name="file" multiple id="AvReport">
                         </div>
                         <div class="row">
                             <div class="col-12">
