--- a/src/main/resources/templates/clients/av.html
+++ b/src/main/resources/templates/clients/av.html
@@ -20,7 +20,7 @@
             <!-- Обработка задания -->
             <div class="row">
                 <div class="col-12 col-sm-6">
-                    <form th:action="@{/excel/av/task}" th:method="post" enctype="multipart/form-data">
+                    <form th:action="@{/excel/av/upload/task}" th:method="post" enctype="multipart/form-data">
                         <h4>Обработка задания</h4>
                         <div class="mb-3">
                             <label for="AvTask" class="form-label">Выберите файл:</label>
@@ -38,7 +38,7 @@
 
                 <!-- Загрузка справочника -->
                 <div class="col-12 col-sm-6">
-                    <form th:action="@{/excel/av/handbook}" th:method="post" enctype="multipart/form-data">
+                    <form th:action="@{/excel/av/upload/handbook}" th:method="post" enctype="multipart/form-data">
                         <h4>Загрузка справочника</h4>
                         <div class="mb-3">
                             <label for="handbook" class="form-label">Выберите файл:</label>
@@ -58,7 +58,7 @@
             <!-- Обработка отчета -->
             <div class="row mt-3">
                 <div class="col-12 col-sm-6">
-                    <form th:action="@{/excel/av/report}" th:method="post" enctype="multipart/form-data">
+                    <form th:action="@{/excel/av/upload/report}" th:method="post" enctype="multipart/form-data">
                         <h4>Обработка отчета</h4>
                         <div class="mb-3">
                             <label for="AvReport" class="form-label">Выберите файл:</label>
@@ -82,30 +82,41 @@
                             <label for="report_no" class="form-label">Download report:</label>
                             <select id="report_no" name="report_no" class="form-select" required>
                                 <option value="">Выбери № отчета</option>
-                                <option th:each="report_no : ${reports}" th:value="${report_no}" th:text="${report_no}"></option>
+                                <option th:each="report_no : ${reports}" th:value="${report_no}"
+                                        th:text="${report_no}"></option>
                             </select>
                         </div>
 
                         <input type="submit" class="btn btn-primary" value="Download">
                     </form>
-
-<!--                    <div class="mb-3">-->
-<!--                        <label for="task_no" class="form-label">Download task:</label>-->
-<!--                        <select id="task_no" name="task_no" class="form-select" required>-->
-<!--                            <option value="">Выбери № задачи</option>-->
-<!--                            <option th:each="task_no : ${tasks}" th:value="${task_no}" th:text="${task_no}"></option>-->
-<!--                        </select>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; Добавлен селектор с выбором поля retailerCode retailNetworks &ndash;&gt;-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="retailerNetwork" class="form-label">Choose retailer code in task:</label>-->
-<!--                        <select id="retailerNetwork" name="retailerNetwork" class="form-select" required>-->
-<!--                            <option value="">Выбери retailer network</option>-->
-<!--                            <option th:each="retailerNetwork : ${retailNetworks}" th:value="${retailerNetwork}" th:text="${retailerNetwork}"></option>-->
-<!--                        </select>-->
-<!--                    </div>-->
-
                 </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-12 col-sm-6">
+                    <h4>Download Task</h4>
+                    <form th:action="@{/excel/av/download/task}" method="post" class="mb-3">
+                        <div class="mb-3">-->
+                            <label for="task_no" class="form-label">Download task:</label>
+                            <select id="task_no" name="task_no" class="form-select" required>
+                                <option value="">Выбери № задачи</option>
+                                <option th:each="task_no : ${tasks}" th:value="${task_no}"
+                                        th:text="${task_no}"></option>
+                            </select>
+                        </div>
+                        <!-- Добавлен селектор с выбором поля retailerCode retailNetworks -->
+                        <div class="mb-3">
+                            <label for="retailNetworkCode" class="form-label">Choose retailer code in task:</label>
+                            <select id="retailNetworkCode" name="retailNetworkCode" class="form-select">
+                                <option value="">Выбери retailer network</option>
+                                <option th:each="retailNetworkCode : ${retailNetworkCode}" th:value="${retailNetworkCode}"
+                                        th:text="${retailNetworkCode}"></option>
+                            </select>
+                        </div>
+
+                        <input type="submit" class="btn btn-primary" value="Download">
+                    </form>
+                </div>
+
             </div>
         </div>
     </div>
