--- a/src/main/resources/templates/clients/av.html
+++ b/src/main/resources/templates/clients/av.html
@@ -88,6 +88,7 @@
                         </div>
 
                         <input type="submit" class="btn btn-primary" value="Download">
+                        <input type="submit" class="btn btn-primary" value="Delete report" name="delete">
                     </form>
                 </div>
             </div>
@@ -114,6 +115,7 @@
                         </div>
 
                         <input type="submit" class="btn btn-primary" value="Download">
+                        <input type="submit" class="btn btn-primary" value="Delete task" name="delete">
                     </form>
                 </div>
 
