--- a/src/main/resources/templates/uploadStatus.html
+++ b/src/main/resources/templates/uploadStatus.html
@@ -23,6 +23,7 @@
             </div>
 
             <a href="/" class="btn btn-primary mt-3">Back to Home</a>
+            <button class="btn btn-primary mt-3" onclick="history.back()">Back</button>
         </div>
     </div>
 </div>
