--- a/src/main/resources/templates/clients/av.html
+++ b/src/main/resources/templates/clients/av.html
@@ -106,7 +106,7 @@
                         </div>
 
                         <input type="submit" class="btn btn-primary" value="Download">
-                        <input type="submit" class="btn btn-primary" value="Delete report" name="delete">
+                        <input type="submit" class="btn btn-danger" value="Delete report" name="delete">
                     </form>
                 </div>
             </div>
@@ -133,13 +133,13 @@
                         </div>
 
                         <input type="submit" class="btn btn-primary" value="Download">
-                        <input type="submit" class="btn btn-primary" value="Delete task" name="delete">
+                        <input type="submit" class="btn btn-danger" value="Delete task" name="delete">
                     </form>
                 </div>
             </div>
             <div class="row mt-3">
                 <div class="col-12 col-sm-6">
-                    <button class="btn btn-primary" onclick="updateTempTableIndex()">
+                    <button class="btn btn-warning" onclick="updateTempTableIndex()">
                         Обновить индекс временной таблицы
                     </button>
                 </div>
