--- a/src/main/resources/templates/clients/av.html
+++ b/src/main/resources/templates/clients/av.html
@@ -64,6 +64,17 @@
             });
         });
     </script>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid #000;
+            text-align: center;
+            padding: 8px;
+        }
+    </style>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -130,7 +141,7 @@
                                     <label for="retailNetworkCode" class="form-label">Choose retailer code in task:</label>
                                     <select id="retailNetworkCode" name="retailNetworkCode" class="form-select">
                                         <option value="">Выбери retailer network</option>
-                                        <option th:each="retailNetworkCode : ${retailNetworkCodes}" th:value="${retailNetworkCode}" th:text="${retailNetworkCode}"></option>
+                                        <option th:each="retailNetworkCode : ${retailNetworkCode}" th:value="${retailNetworkCode}" th:text="${retailNetworkCode}"></option>
                                     </select>
                                 </div>
                                 <input type="submit" class="btn btn-primary" value="Download">
@@ -234,10 +245,57 @@
                 <div class="tab-pane fade" id="comparison" role="tabpanel" aria-labelledby="comparison-tab">
                     <div class="row mt-3">
                         <div class="col-12 col-sm-6">
-                            <h4>Сравнение отчетов</h4>
+                            <form th:action="@{/excel/av/comparison}" th:method="post">
+                                <div class="mb-3 row">
+                                    <div class="col-sm-6">
+                                        <label for="comparisonCity" class="form-label">Выберите город:</label>
+                                        <select id="comparisonCity" name="city" class="form-select" required>
+                                            <option value="">Выберите город</option>
+                                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.id + ' ' + city.russianName}"></option>
+                                        </select>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label for="comparisonTypeReport" class="form-label">Выберите тип отчета:</label>
+                                        <select id="comparisonTypeReport" name="typeReport" class="form-select" required>
+                                            <option value="">Выберите тип отчета</option>
+                                            <option th:each="typeReport : ${typeReports}" th:value="${typeReport.name()}" th:text="${typeReport.russianName}"></option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <button type="submit" class="btn btn-primary">Обработать</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12">
+                            <table class="table table-striped" id="reportTable">
+                                <thead>
+                                <tr>
+                                    <th>Сеть</th>
+                                    <th th:each="taskNo : ${taskNos}" th:text="${taskNo}">Task No</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="entry : ${reportSummaryMap}">
+                                    <td th:text="${entry.key}">Retail Chain</td>
+                                    <td th:each="taskNo : ${taskNos}">
+                                        <div th:each="report : ${entry.value}" th:if="${report.task_no == taskNo}">
+                                            <span th:text="${report.countRows}">0</span>,
+                                            <span th:text="${report.countCompetitorsPrice}">0</span>,
+                                            <span th:text="${report.countPromotionalPrice}">0</span>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
+
             </div>
 
         </div>
